# neo-c

./: -no-gc  .gitignore  .gitmodules  01main.c  01main.c.c  01main.c.i  02transpile.c  02transpile.c.c  02transpile.c.i  03transpile2.c  03transpile2.c.c  03transpile2.c.i  04heap.c  04heap.c.c  04heap.c.i  05function.c  05function.c.c  05function.c.i  05function2.c  05function2.c.c  05function2.c.i  05function3.c  05function3.c.c  05function3.c.i  05function4.c  05function4.c.c  05function4.c.i  06str.c  06str.c.c  06str.c.i  07var.c  07var.c.c  07var.c.i  08if.c  08if.c.c  08if.c.i  09while.c  09while.c.c  09while.c.i  10do_while.c  (+136 more)
code/: HelloWorld.c  HelloWorld.c.bc  HelloWorld.c.c  HelloWorld10.c  HelloWorld10.c.bc  HelloWorld10.c.c  HelloWorld11.c  HelloWorld11.c.bc  HelloWorld11.c.c  HelloWorld12.c  HelloWorld12.c.bc  HelloWorld12.c.c  HelloWorld13.c  HelloWorld13.c.bc  HelloWorld13.c.c  HelloWorld14.c  HelloWorld14.c.bc  HelloWorld14.c.c  HelloWorld15.c.bc  HelloWorld15.c.c  HelloWorld16.c.bc  HelloWorld16.c.c  HelloWorld17.c  HelloWorld17.c.bc  HelloWorld17.c.c  HelloWorld18.c  HelloWorld18.c.bc  HelloWorld18.c.c  HelloWorld19.c  HelloWorld19.c.bc  HelloWorld19.c.c  HelloWorld2.c  HelloWorld2.c.bc  HelloWorld2.c.c  HelloWorld20.c  HelloWorld20.c.bc  HelloWorld20.c.c  HelloWorld21  HelloWorld21.c  HelloWorld21.c.c  (+12 more)
code2/: HelloWorld  HelloWorld.c  HelloWorld2.c  HelloWorld2.c.ach  HelloWorld2.c.c  HelloWorld2.c.i
comelang2/: 01main.c.c  01main.c.i  02transpile.c.i  03transpile2.c  05function.c  06str.c  09while.c  11for.c  12switch.c  15union.c  17typedef.c  18field.c  19eq.c  20method.c  23interface.c  common.h
comelang2-osx/: 02transpile.c.c  03transpile2.c.c  04heap.c  05function.c  05function.c.c  05function2.c  05function2.c.c  05function3.c.c  05function4.c.c  06str.c  09while.c  09while.c.c  10do_while.c.c  12switch.c  12switch.c.c  13op.c.c  14struct.c.c  15union.c.c  19eq.c.c  20method.c  20method.c.c  22impl.c.c  configure.in
comelang2-src/: 01main.c.c  02transpile.c  02transpile.c.i  04heap.c  05function.c  07var.c  10do_while.c  14struct.c  17typedef.c  20method.c  21obj.c  common.h
comelang2-test/: c.c  c.c.c
gogo/: aaa  configure  configure.in  configure~  debug_build.sh  fast_build.sh  home_build.sh
gogo/src/: 01fun.c  02int.c  03var.c  04if.c  common.h  main.c  type.c
headers/: a.h  common.h  neo-c.h  neo-c.inl
headers/examples/: a.h  common.h
lcc/: fast_build.sh  makefile
makefiles/: Makefile.In
mf/: README.md
mf/src/: main.c
osx/: 01main.c.c  02transpile.c  03transpile2.c  04heap.c.c  05function3.c  05function4.c  06str.c.c  07var.c.c  08if.c  08if.c.c  11for.c.c  13op.c  14struct.c  16enum.c  16enum.c.c  17typedef.c.c  18field.c.c  19eq.c  21obj.c.c  22impl.c  23interface.c  23interface.c.c  Makefile.in  comelang2.h  configure  libcomelang2.c  libcomelang2.c.c
shsh/src/: main.c
sources/: neo-c-io.c  neo-c-regex.c  neo-c-string-extensions.c  neo-c-string-list.c  neo-c-string.c  neo-c.c  neo-c2.c  neo-c3.c  neo-c4.c  neo-c5.c  neo-c7.c  neo-c8.c
sources/compiler/: buffer.c  compiler.c  klass.c  llvm.cpp  macro.c  main.c  node.c  node_block.c  node_compile.c  node_function.c  node_function_call.c  node_function_come.c  node_function_lib.c  node_loop.c  node_op.c  node_type.c  node_value.c  node_var.c  parse_exp.c  parse_function.c  parse_lib.c  parse_loop.c  parse_op.c  parse_type.c  parse_value.c  parse_var.c  typedef.c  vtable.c  xfunc.c
sources/examples/example_0/: a.c  b.c
sources/examples/example_10/: HelloWorld10.c
sources/examples/example_11/: HelloWorld11.c
sources/examples/example_12/: HelloWorld12.c
sources/examples/example_13/: HelloWorld13.c
sources/examples/example_14/: HelloWorld14.c
sources/examples/example_18/: HelloWorld18.c
sources/examples/example_3/: HelloWorld3.c
sources/examples/example_4/: HelloWorld4.c
sources/examples/example_5/: HelloWorld5.c
sources/examples/example_6/: HelloWorld6.c
sources/examples/example_7/: HelloWorld7.c
sources/examples/example_8/: HelloWorld8.c
sources/examples/example_9/: HelloWorld9.c
src/: common.h  compiler.c  klass.c  llvm.cpp  main.c  node.c  node_block.c  node_compile.c  node_function.c  node_function_call.c  node_function_come.c  node_function_lib.c  node_loop.c  node_op.c  node_type.c  node_value.c  node_var.c  parse_exp.c  parse_function.c  parse_lib.c  parse_loop.c  parse_op.c  parse_type.c  parse_value.c  parse_var.c  transpiler.c  typedef.c  vtable.c  xfunc.c
src2/: 01main.c.c  02transpile.c  02transpile.c.c  02transpile.c.i  03transpile2.c  04heap.c  08if.c  11for.c  13op.c  16enum.c  18field.c  21obj.c  22impl.c  23interface.c  common.h  fast_build.sh
tcc/: aaa  bbb  c.c  config.mak  fast_build.sh  tcc.c.bc  tcc.c.i
tcc/tests/: libtcc_test.c.bc
vin/: config.status
vin/src/: 01init.c  02base.c  03insert_mode.c  06file.c  07yank.c  09search.c  12command.c  13completion.c  14dot.c  17hvisual.c  18vvisual.c  19rewrite_mode.c  common.h
yappy/: README.md  configure  configure.in  configure~
yappy/code/: HelloWorld.py
yappy/src/: 01int.c  02add.c  03str.c  04print.c  05var.c  06fun.c  07module.c  08if.c  09comment.c  10while.c  11op.c  12list.c  _07bool.c  _12module.c  common.h  main.c  type.c
z/: README.md  configure  configure.in  configure~
z/code/: HelloWorld.sh
z/src/: 06var.c  common.h  main.c
zed/: README.md  a  aaa  configure  configure.in  configure~  fast_build.sh  zed2
zed/code/: HelloWorld.sh
zed/gc/src/: 03var.c
zed/src/: 01int.c  02op.c  02str.c  03var.c  04if.c  04var.c  05loop.c  06print.c  07regex.c  08list.c  09fun.c  10fun.c  11fun.c  11str_fun.c  12fun2.c  common.h  main  main.c
zed2/: README.md  aaa  configure  configure.in  configure~
zed2/src/: 05list.c  06var.c  07if.c  07var.c  08loop.c  09print.c  10fun.c  11regex.c  12fun2.c  12str_fun.c  common.h  main.c
